--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
+    "lucide-react": "^0.363.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -55,6 +56,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-loader-spinner": "^6.1.6",
     "react-resizable-panels": "^2.0.8",
     "react-select": "^5.8.0",
     "react-select-async-paginate": "^0.7.3",
