--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "extends": [
     "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
     "next/core-web-vitals"
-  ]
+  ],
+  "rules": {
+    "no-unused-vars": "warn"
+  }
 }
