--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-select": "^5.8.0",
     "react-select-async-paginate": "^0.7.3",
     "react-toastify": "^10.0.4",
+    "recharts": "^2.12.7",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -73,9 +74,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
