--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "uuidv4": "^6.2.13",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
