--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,18 @@
 {
+  "parser": "@typescript-eslint/parser",
   "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
+    "airbnb",
+    // "airbnb/hooks",
+    "airbnb-typescript",
     "next/core-web-vitals"
   ],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "rules": {
-    "no-unused-vars": "warn"
+    "linebreak-style": "off",
+    "@typescript-eslint/indent": "off",
+    "react/jsx-indent": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
